--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -725,12 +725,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "accuracy = rf.score(input_)"
+    "accuracy = rf.score(input_test, expected_output_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78.28947368421053\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(accuracy * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
